syntax = "proto3";

package proto;

option go_package = "/.gatewaypb";

import "google/api/annotations.proto";

service APIGatewayService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    rpc AddProduct(AddProductRequest) returns (AddProductResponse) {
        option (google.api.http) = {
            post: "/v1/products"
            body: "*"
        };
    }
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/v1/orders"
            body: "*"
        };
    }
    rpc ListProducts(ListProductsRequest) returns (stream ListProductsResponse) {
        option (google.api.http) = {
            get: "/v1/products"
        };
    }
    rpc CreateOrders(stream CreateOrdersRequest) returns (CreateOrdersResponse) {
        option (google.api.http) = {
            post: "/v1/orders/stream"
            body: "*"
        };
    }
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    string id = 1;
}

message AddProductRequest {
    string name = 1;
    float price = 2;
}

message AddProductResponse {
    string id = 1;
}

message CreateOrderRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
    repeated Product products = 1;
}

message CreateOrdersRequest {
    string user_id = 1;
    repeated string product_ids = 2;
}

message CreateOrdersResponse {
    string id = 1;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
}
